--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MyCouponActivity"></activity>
+        <activity android:name=".MyCouponActivity" />
         <activity android:name=".ManageCouponActivity" />
         <activity android:name=".AddCouponActivity" />
         <activity android:name=".RegisterActivityPartner" />
